Add GUI dialogs for APK diff, patch and AI assistant

--- a/jadx-gui/src/main/resources/i18n/Messages_ru_RU.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_ru_RU.properties
@@ -29,6 +29,9 @@ menu.log=Просмотр логов
 menu.help=Помощь
 menu.about=О программе
 #menu.quark=Quark Engine
+menu.apk_diff=Сравнить APK
+menu.apk_patch=Пропатчить APK
+menu.ai_assistant=AI ассистент
 menu.update_label=Версия %s уже доступна!
 #menu.hex_viewer=Hex Viewer
 
@@ -499,6 +502,21 @@ adb_dialog.start_okay=ADB запущен на порту: %s.
 adb_dialog.start_fail=Ошибка запуска ADB сервера на порту: %s!
 adb_dialog.forward_fail=Не удалось перейти из-за неизвестной ошибки
 adb_dialog.being_debugged_msg=Похоже, что к этому процессу уже подключен отладчик. Вы хотите продолжить?
+diff_dialog.title=Сравнение APK
+diff_dialog.old_apk=Старый APK
+diff_dialog.new_apk=Новый APK
+diff_dialog.compare=Сравнить
+patch_dialog.title=Патч APK
+patch_dialog.old_apk=Оригинальный старый APK
+patch_dialog.old_mod_apk=Модифицированный старый APK
+patch_dialog.new_apk=Новый APK
+patch_dialog.out_apk=Файл вывода
+patch_dialog.patch=Применить
+patch_dialog.success=Файл сохранён в %s
+assistant_dialog.title=AI ассистент
+assistant_dialog.prompt=Вопрос
+assistant_dialog.send=Отправить
+assistant_dialog.api_key_missing=Не указан OPENAI_API_KEY
 adb_dialog.unknown_android_ver=Ошибка парсинга версии Android. Использовать Android 8 по умолчанию?
 adb_dialog.being_debugged_title=Этот процесс уже занят
 adb_dialog.init_dbg_fail=Ошибка инициализации отладчика
