Add close button label translations

--- a/jadx-gui/src/main/resources/i18n/Messages_de_DE.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_de_DE.properties
@@ -144,6 +144,7 @@ common_dialog.add=Hinzufügen
 common_dialog.update=Aktualisieren
 common_dialog.remove=Entfernen
 common_dialog.reset=Zurücksetzen
+common_dialog.close=Schließen
 
 file_dialog.supported_files=Unterstützte Dateien
 file_dialog.load_dir_title=Verzeichnis laden
