--- a/jadx-gui/src/main/resources/i18n/Messages_en_US.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_en_US.properties
@@ -147,6 +147,7 @@ common_dialog.add=Add
 common_dialog.update=Update
 common_dialog.remove=Remove
 common_dialog.reset=Reset
+common_dialog.close=Close
 
 file_dialog.supported_files=Supported files
 file_dialog.load_dir_title=Load directory
