--- a/jadx-gui/src/main/resources/i18n/Messages_es_ES.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_es_ES.properties
@@ -144,6 +144,7 @@ nav.forward=Adelante
 #common_dialog.update=Update
 #common_dialog.remove=Remove
 #common_dialog.reset=Reset
+common_dialog.close=Cerrar
 
 #file_dialog.supported_files=Supported files
 #file_dialog.load_dir_title=Load directory
