--- a/jadx-gui/src/main/resources/i18n/Messages_id_ID.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_id_ID.properties
@@ -144,6 +144,7 @@ common_dialog.add=Tambah
 common_dialog.update=Perbarui
 common_dialog.remove=Hapus
 common_dialog.reset=Reset
+common_dialog.close=Tutup
 
 file_dialog.supported_files=Berkas yang didukung
 file_dialog.load_dir_title=Muat direktori
