--- a/jadx-gui/src/main/resources/i18n/Messages_ru_RU.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_ru_RU.properties
@@ -147,6 +147,7 @@ common_dialog.add=Добавить
 common_dialog.update=Обновить
 common_dialog.remove=Убрать
 common_dialog.reset=Сброс
+common_dialog.close=Закрыть
 
 file_dialog.supported_files=Поддерж. файлы
 file_dialog.load_dir_title=Импортировать папку
