--- a/jadx-gui/src/main/resources/i18n/Messages_ko_KR.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_ko_KR.properties
@@ -144,6 +144,7 @@ common_dialog.add=추가
 common_dialog.update=업데이트
 common_dialog.remove=삭제
 #common_dialog.reset=Reset
+common_dialog.close=닫기
 
 file_dialog.supported_files=지원되는 파일
 file_dialog.load_dir_title=디렉토리 불러오기
