--- a/jadx-gui/src/main/resources/i18n/Messages_pt_BR.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_pt_BR.properties
@@ -144,6 +144,7 @@ common_dialog.add=Adicionar
 common_dialog.update=Atualizar
 common_dialog.remove=Remover
 #common_dialog.reset=Reset
+common_dialog.close=Fechar
 
 file_dialog.supported_files=Arquivos suportados
 file_dialog.load_dir_title=Carregar diretório
