--- a/jadx-gui/src/main/resources/i18n/Messages_zh_CN.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_zh_CN.properties
@@ -144,6 +144,7 @@ common_dialog.add=添加
 common_dialog.update=更新
 common_dialog.remove=移除
 common_dialog.reset=重置
+common_dialog.close=关闭
 
 file_dialog.supported_files=支持的文件
 file_dialog.load_dir_title=加载目录
