Add missing dialog translations

--- a/jadx-gui/src/main/resources/i18n/Messages_zh_TW.properties
+++ b/jadx-gui/src/main/resources/i18n/Messages_zh_TW.properties
@@ -520,3 +520,19 @@ action_category.plugin_script=外掛程式腳本
 #hex_viewer.goto_address=Go To Address
 #hex_viewer.enter_address=Enter address range:
 #hex_viewer.find=Find
+
+diff_dialog.title=APK diff
+diff_dialog.old_apk=Old APK
+diff_dialog.new_apk=New APK
+diff_dialog.compare=Compare
+patch_dialog.title=APK patch
+patch_dialog.old_apk=Old original APK
+patch_dialog.old_mod_apk=Old modified APK
+patch_dialog.new_apk=New original APK
+patch_dialog.out_apk=Output APK
+patch_dialog.patch=Patch
+patch_dialog.success=Patched file saved to %s
+assistant_dialog.title=AI Assistant
+assistant_dialog.prompt=Question
+assistant_dialog.send=Send
+assistant_dialog.api_key_missing=OPENAI_API_KEY env variable not set
